# metaforge

./: Cargo.toml  LICENSE  README.md  mkdocs.yml
docs/: index.md
src/: lib.rs
src/backstage/: mod.rs
src/backstage/catalog_info/: errors.rs  mod.rs
src/backstage/component/: mod.rs
src/git/: errors.rs  mod.rs
src/languages/: errors.rs  mod.rs
src/languages/go/: mod.rs
src/languages/rust/: mod.rs
src/project/: mod.rs
test-data/go/: go.mod
test-data/rust/: Cargo.toml
