[package]
name = "metaforge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-walkdir = "2.1.0"
clap = { version = "4", features = ["color", "derive", "env", "unicode", "suggestions", "wrap_help"] }
futures-lite = "2.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
internal = { git = "https://alisonjenkins@bitbucket.org/acompany/metaforge.git" }

[dev-dependencies]
tempfile = "3.20.0"
